--- a/operations/community/use-haproxy.yml
+++ b/operations/community/use-haproxy.yml
@@ -28,7 +28,7 @@
           ssl_pem: "((router_ssl.certificate))((router_ssl.private_key))"
           tcp_link_port: 2222
 - type: replace
-  path: /instance_groups/-
+  path: /instance_groups?/-
   value:
     name: smoke-tests
     lifecycle: errand
